--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         document.addEventListener('DOMContentLoaded', () => alert("Дерево DOM готово после скрипта с 'defer'!")); // (2)
     </script>
     <script defer src="https://javascript.info/article/script-async-defer/long.js?speed=1"></script>
-    <p>..2 defer.содержимое после скрипта...</p>
+    <p>..2 defer.содержимое после скрипта..</p>
 
 
-    <p>..3 asunc.содержимое перед скриптами...</p>
+    <p>..3 asunc.содержимое перед скриптами..</p>
     <script>
         document.addEventListener('DOMContentLoaded', () => alert("DOM готов!"));
     </script>
